added css with links

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Portfolio</title>
 </head>
 
+<style>
+   
+</style>
+
 <body>
-    <table>
+    <table cellSpacing='10'>
         <tbody>
             <tr>
                 <td>
-                    <img width="200px" height="230px" src="images/girl.jpg" alt="a small girl">
+                    <img width="200px" height="230px" radi src="images/girl.jpg" alt="a small girl">
                 </td>
                 <td>
                     <h1>Bang sumakar</h1>
@@ -69,7 +74,7 @@
 
         <hr>
         <a href="hobbies/hobbies.html">My hobbies</a> <br>
-        <a href="hobbies/hobbies.html">Contact me</a>
+        <a href="contact-me/contact-me.html">Contact me</a>
 
         <hr>
         <h2>Test table</h2>
