added multiple types of css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1>Bang sumakar</h1>
                     <h3><em>currently a <strong><a href="https://www.google.com/">software develop</a></strong></em>
                     </h3>
-                    <h3>I am a Full stack developr and ❤ coding</h3>
+                    <h3 class="native">I am a Full stack developer and ❤ coding</h3>
                 </td>
             </tr>
         </tbody>
@@ -32,7 +32,7 @@
     <hr>
     <h2>Books and Teaching</h2>
     <ul>
-        <li>Lorem Ipsum is simply dummy text of the printing</li>
+        <li id="idstyle">Lorem Ipsum is simply dummy text of the printing</li>
         <li>Lorem Ipsum has been the industry's standard dummy text</li>
     </ul>
     <hr>
@@ -63,7 +63,7 @@
         <h2>Skills</h2>
         <table>
             <tr>
-                <td>React Native</td>
+                <td class="native">React Native</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
