added basic of css, more to come

--- a/Basics/index.html
+++ b/Basics/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <style>
-   
+
 </style>
 
 <body>
@@ -18,7 +18,9 @@
         <tbody>
             <tr>
                 <td>
-                    <img width="200px" height="230px" radi src="images/girl.jpg" alt="a small girl">
+                    <img class="chicken" width="200px" height="160px"
+                        src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/samsung/312/rooster_1f413.png"
+                        alt="chicken">
                 </td>
                 <td>
                     <h1>Bang sumakar</h1>
@@ -63,7 +65,7 @@
         <h2>Skills</h2>
         <table>
             <tr>
-                <td class="native">React Native</td>
+                <td class="native anotherClass">React Native</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
@@ -106,6 +108,7 @@
                 </td>
             </tr>
         </table>
+
 </body>
 
 </html>
