Added structured folder

--- a/HTML/2.Portfolio Website/index.html
+++ b/HTML/2.Portfolio Website/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="icon/favicon.ico">
 </head>
 <body>
-    
+    <div>
+        <h1>I'm Shikhar</h1>
+        <p>web developer</p>
+    </div>
 </body>
 </html>
