--- a/CSS/index.html
+++ b/CSS/index.html
@@ -6,18 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <!-- need to put it before main style or we can import in css file-->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
+  
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="container">
-        <h1>CSS Box modal</h1>
+    <header>
+        <h1>CSS Typography</h1>
     </header>
-    <main class="container">
+    <main>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laudantium exercitationem corporis quia
-            dolores esse enim? Necessitatibus quisquam, magni iste beatae earum et fugiat aut delectus porro voluptate,
+            dolores esse enim? <span>Necessitatibus</span> quisquam, magni iste beatae earum et fugiat aut delectus porro voluptate,
             praesentium totam?</p>
-            <div class="circle"></div>
+
+        <form>
+            <label for="name">Name:</label>
+            <input id="name" type="text" placeholder="Your Name" />
+            <button>Submit</button>
+        </form>
     </main>
 </body>
 
