Added Styling for anchor links

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,29 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   <!-- need to put it before main style or we can import in css file-->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
-  
+    <title>CSS Links</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <h1>CSS Typography</h1>
+        <h1>CSS Links</h1>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laudantium exercitationem corporis quia
-            dolores esse enim? <span>Necessitatibus</span> quisquam, magni iste beatae earum et fugiat aut delectus porro voluptate,
-            praesentium totam?</p>
+        <p>Welcome to my page about <a href="https://www.google.com/search?q=+web+links">cool web links</a>.</p>
 
-        <form>
-            <label for="name">Name:</label>
-            <input id="name" type="text" placeholder="Your Name" />
-            <button>Submit</button>
-        </form>
+        <p>Actually.. that isn&apos;t a good search phrase. Let's search for <a
+                href="https://www.google.com/search?q=hypertext+links">hypertext links</a> instead!</p>
+
+        <p>I created page one with information about <a href="one.html">guitars</a>.</p>
+
+        <p>I created page two with information about <a href="two.html">JavaScript</a>.</p>
     </main>
 </body>
 
