--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,23 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Links</title>
+    <title>CSS Lists</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <h1>CSS Links</h1>
+        <h1>CSS Lists</h1>
     </header>
     <main>
-        <p>Welcome to my page about <a href="https://www.google.com/search?q=+web+links">cool web links</a>.</p>
-
-        <p>Actually.. that isn&apos;t a good search phrase. Let's search for <a
-                href="https://www.google.com/search?q=hypertext+links">hypertext links</a> instead!</p>
-
-        <p>I created page one with information about <a href="one.html">guitars</a>.</p>
-
-        <p>I created page two with information about <a href="two.html">JavaScript</a>.</p>
+        <article>
+            <h2>Ordered List</h2>
+            <ol start="4" reversed>
+                <li>Step One</li>
+                <li>Step Two</li>
+                <li>Step Three</li>
+            </ol>
+        </article>
+        <article>
+            <h2>Unordered List</h2>
+            <ul>
+                <li>Step One</li>
+                <li>Step Two</li>
+                <li>Step Three</li>
+            </ul>
+        </article>
     </main>
 </body>
 
