Added floats for layout like newspaper

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Display</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Css Floats</title>
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 
 <body>
-    <main>
-        <!-- <p>This is a paragraph.</p>
-        <p>This is <span class="opposite">another</span> paragraph.</p> -->
-
-        <nav>
-            <ul>
-                <li><a href="#">Intro</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Projects</a></li>
-            </ul>
-        </nav>
-        
-    </main>
+    <section>
+    <div class="block left">Float</div>
+    <p>Lorem ipsum dolor sit amet consectetur</p>
+    <!-- old way for pushing 2nd para out of container -->
+    <!-- <div class="clear"></div> -->
+    </section>
+    <p>Aliquid in culpa itaque labore? Illum corporis ex recusandae laborum accusamus delectus velit unde deleniti voluptate ad. Maxime, error fugiat.</p>
+    <p>A velit fuga beatae placeat facere facilis repellat totam quisquam voluptates natus. Officiis nam sapiente consequatur cumque quibusdam mollitia dolores.</p>
+    <div class="block right">Float 2</div>
+    <p>Veritatis alias eos ut? Ab, perferendis rerum accusamus magni voluptate cumque veniam quas eligendi iure, aspernatur, earum inventore aliquid assumenda.</p>
+    <p>Minima laboriosam saepe sapiente beatae quis dicta quod aut quae hic, itaque totam alias delectus? Cupiditate commodi explicabo architecto! Illo.</p>
 </body>
 
 </html>
