Added column and its responsive

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Css Floats</title>
+    <title>Css Column</title>
     <link rel="stylesheet" href="Css/style.css">
 </head>
-
 <body>
-    <section>
-    <div class="block left">Float</div>
-    <p>Lorem ipsum dolor sit amet consectetur</p>
-    <!-- old way for pushing 2nd para out of container -->
-    <!-- <div class="clear"></div> -->
+    <section class="column">
+            <p>1 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam maxime harum quisquam eveniet soluta nesciunt explicabo ipsum aut, sunt eum.</p>
+            <p>2 Impedit, aliquid voluptatem id unde ipsa eligendi excepturi, nemo facilis dolore ad dolorem laudantium reprehenderit praesentium velit iure voluptate perferendis.</p>
+            <!-- <h2>Next topic</h2> -->
+            <!-- to get HTMl unicode => https://unicode-table.com/en/ -->
+            <p class="quote">&#8220;Where is my rug, Man&#8221; <span class="nowrap"> &#8212;The Dude</span></p>
+            <p>3 Dolor atque totam soluta omnis enim inventore sint, ducimus cupiditate labore alias amet consequatur itaque officia aperiam impedit maxime sequi.</p>
+            <p>4 Fugiat at quasi laboriosam adipisci. Libero tempore fugiat quos natus vitae at ratione officia saepe id dolores accusamus, reiciendis adipisci.</p>
     </section>
-    <p>Aliquid in culpa itaque labore? Illum corporis ex recusandae laborum accusamus delectus velit unde deleniti voluptate ad. Maxime, error fugiat.</p>
-    <p>A velit fuga beatae placeat facere facilis repellat totam quisquam voluptates natus. Officiis nam sapiente consequatur cumque quibusdam mollitia dolores.</p>
-    <div class="block right">Float 2</div>
-    <p>Veritatis alias eos ut? Ab, perferendis rerum accusamus magni voluptate cumque veniam quas eligendi iure, aspernatur, earum inventore aliquid assumenda.</p>
-    <p>Minima laboriosam saepe sapiente beatae quis dicta quod aut quae hic, itaque totam alias delectus? Cupiditate commodi explicabo architecto! Illo.</p>
-</body>
 
+        <p>5 Impedit provident eos hic tenetur quia itaque cum, repellat architecto dolorum magnam, vero quas ipsum obcaecati nam fugiat culpa a!</p>
+    
+</body>
 </html>
