Added Position property just like in real website

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Css Column</title>
-    <link rel="stylesheet" href="Css/style.css">
+    <title>CSS Position</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <section class="column">
-            <p>1 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam maxime harum quisquam eveniet soluta nesciunt explicabo ipsum aut, sunt eum.</p>
-            <p>2 Impedit, aliquid voluptatem id unde ipsa eligendi excepturi, nemo facilis dolore ad dolorem laudantium reprehenderit praesentium velit iure voluptate perferendis.</p>
-            <!-- <h2>Next topic</h2> -->
-            <!-- to get HTMl unicode => https://unicode-table.com/en/ -->
-            <p class="quote">&#8220;Where is my rug, Man&#8221; <span class="nowrap"> &#8212;The Dude</span></p>
-            <p>3 Dolor atque totam soluta omnis enim inventore sint, ducimus cupiditate labore alias amet consequatur itaque officia aperiam impedit maxime sequi.</p>
-            <p>4 Fugiat at quasi laboriosam adipisci. Libero tempore fugiat quos natus vitae at ratione officia saepe id dolores accusamus, reiciendis adipisci.</p>
-    </section>
 
-        <p>5 Impedit provident eos hic tenetur quia itaque cum, repellat architecto dolorum magnam, vero quas ipsum obcaecati nam fugiat culpa a!</p>
-    
+<body>
+    <!-- <div class="outer-container">
+        <div class="inner-container">
+            <div class="box absolute">
+                <p>Absolute</p>
+            </div>
+            <div class="box relative">
+                <p>Relative</p>
+            </div>
+            <div class="box fixed">
+                <p>Fixed</p>
+            </div>
+            <div class="box sticky">
+                <p>Sticky</p>
+            </div>
+        </div>
+    </div> -->
+    <button class="social">🚀</button>
+    <section id="one">
+        <header class="blue">Header One</header>
+        <h2>One => for more clarity about block/inline :- https://www.w3schools.com/html/html_blocks.asp</h2>
+    </section>
+    <section id="two">
+        <header class="red">Header Two</header>
+        <h2>Two </h2>
+    </section>
+    <section id="three">
+        <header class="green">Header Three</header>
+        <h2>Three</h2>
+    </section>
+    <footer>
+        
+        <a href="#one">One</a> | 
+        <a href="#two">Two</a> | 
+        <a href="#three">Three</a>
+        <p style="font-size: 20px;">here clicking them will point to related header :)</p>
+    </footer>
 </body>
+
 </html>
