Added header in a proper format

--- a/CSS - Maxi/index.html
+++ b/CSS - Maxi/index.html
@@ -12,6 +12,28 @@
 </head>
  
 <body>
+    <header class="main-header">
+        <div>
+            <a class="main-header__host" href="index.html">Host</a>
+        </div>
+        <nav class="main-nav">
+            <ul class="main-nav__items">
+                <li class="main-nav__item">
+                    <!-- anchor tag is inline element -->
+                    <a href="index.html">Header 1</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="index.html">Header 2</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="index.html">Header 3</a>
+                </li>
+                <li class="main-nav__item main-nav__item--cta">
+                    <a href="index.html">Header 4</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section id="product-overview">
             <h1>Get the freedom you deserve.</h1>
