--- a/CSS - Maxi/index.html
+++ b/CSS - Maxi/index.html
@@ -3,46 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>uHost</title>
-    <link rel="shortcut icon" href="favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <title>CSS Course</title>
     <link rel="stylesheet" href="main.css">
 </head>
- 
+
 <body>
-    <header class="main-header">
-        <div>
-            <a class="main-header__host" href="index.html">Host</a>
-        </div>
-        <nav class="main-nav">
-            <ul class="main-nav__items">
-                <li class="main-nav__item">
-                    <!-- anchor tag is inline element -->
-                    <a href="index.html">Header 1</a>
-                </li>
-                <li class="main-nav__item">
-                    <a href="index.html">Header 2</a>
-                </li>
-                <li class="main-nav__item">
-                    <a href="index.html">Header 3</a>
-                </li>
-                <li class="main-nav__item main-nav__item--cta">
-                    <a href="index.html">Header 4</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1>
-        </section>
-        <section id="plans">
-            <h1 class="section-title">Choose Your Plan</h1>
-            <p>Make sure you get the most for your money!</p>
-        </section>
-    </main>
+    <nav>
+        <!-- navigating to particular section -->
+        <a href="#intro" class="active">Intro</a>
+        <a href="#outro">Outro</a>
+    </nav>
+    <section id="intro" class="main-section highlighted">
+        <p>This is the intro section.</p>
+    </section>
+    <section id="outro" class="main-section">
+        <p>This is the outro section.</p>
+    </section>
 </body>
 
 </html>
