Added actual work projects

--- a/CSS - Maxi/index.html
+++ b/CSS - Maxi/index.html
@@ -3,16 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CSS Course</title>
+    <title>uHost</title>
+    <link rel="shortcut icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
-<<<<<<< HEAD
   
-=======
-
->>>>>>> 5e1b3595e7ac2964d3a2b027dc572eb1dec9b1f2
 <body>
     <header class="main-header">
         <div>
@@ -38,7 +36,7 @@
     </header>
     <main>
         <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1>
+            <h1>Get the freedom you deserve.</h1> 
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
