Added actual data here now :)

--- a/CSS - Maxi/index.html
+++ b/CSS - Maxi/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
-  
+ 
 <body>
     <header class="main-header">
         <div>
@@ -36,55 +36,11 @@
     </header>
     <main>
         <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1> 
+            <h1>Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
-            <div>
-                <article class="plan">
-                    <h1>FREE</h1>
-                    <h2>$0/month</h2>
-                    <h3>For hobby projects or small teams.</h3>
-                    <ul>
-                        <li>1 Workspace</li>
-                        <li>Unlimited Traffic</li>
-                        <li>10GB Storage</li>
-                        <li>Basic Support</li>
-                    </ul>
-                    <div>
-                        <button>CHOOSE PLAN</button>
-                    </div>
-                </article>
-                <article class="plan">
-                    <h1>RECOMMENDED</h1>
-                    <h1>PLUS</h1>
-                    <h2>$29/month</h2>
-                    <h3>For ambitious projects.</h3>
-                    <ul>
-                        <li>5 Workspaces</li>
-                        <li>Unlimited Traffic</li>
-                        <li>100GB Storage</li>
-                        <li>Plus Support</li>
-                    </ul>
-                    <div>
-                        <button>CHOOSE PLAN</button>
-                    </div>
-                </article>
-                <article class="plan">
-                    <h1>PREMIUM</h1>
-                    <h2>$99/month</h2>
-                    <h3>Your enterprise solution.</h3>
-                    <ul>
-                        <li>10 Workspaces</li>
-                        <li>Unlimited Traffic</li>
-                        <li>Unlimited Storage</li>
-                        <li>Priority Support</li>
-                    </ul>
-                    <div>
-                        <button>CHOOSE PLAN</button>
-                    </div>
-                </article>
-            </div>
+            <p>Make sure you get the most for your money!</p>
         </section>
     </main>
 </body>
