Added full basic style website

--- a/CSS - Maxi/index.html
+++ b/CSS - Maxi/index.html
@@ -29,7 +29,7 @@
                     <a href="index.html">Header 3</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="index.html">Header 4</a>
+                    <a href="packages/index.html">Header 4</a>
                 </li>
             </ul>
         </nav>
@@ -86,6 +86,43 @@
                 </article>
             </div>
         </section>
+        
+        <section id="advertise">
+            <h1 class="section-title">Many Good Reasons to Stick Around</h1>
+            <ul class="advertise__features--list">
+                <li class="advertise__feature">
+                    <div class="advertise__image">
+
+                    </div>
+                    <p>3,857,000 Trusting Customers</p>
+                </li>
+                <li class="advertise__feature">
+                    <div class="advertise__image">
+
+                    </div>
+                    <p>99.999% Uptime Guarantee</p>
+                </li>
+                <li class="advertise__feature">
+                    <div class="advertise__image">
+
+                    </div>
+                    <p>Lightning Fast CDN</p>
+                </li>
+            </ul>
+        </section>
+
+        <footer class="main-footer">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Support</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms of Use</a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
     </main>
 </body>
 
