--- a/CSS - Maxi/index.html
+++ b/CSS - Maxi/index.html
@@ -8,63 +8,62 @@
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css">
 </head>
-  
+
 <body>
     <header class="main-header">
         <div>
-            <a class="main-header__host" href="index.html">Host</a>
+            <a href="index.html" class="main-header__brand">
+                uHost
+            </a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav__items">
                 <li class="main-nav__item">
-                    <!-- anchor tag is inline element -->
-                    <a href="index.html">Header 1</a>
+                    <a href="packages/index.html">Packages</a>
                 </li>
                 <li class="main-nav__item">
-                    <a href="index.html">Header 2</a>
-                </li>
-                <li class="main-nav__item">
-                    <a href="index.html">Header 3</a>
+                    <a href="customers/index.html">Customers</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="packages/index.html">Header 4</a>
+                    <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1> 
+            <h1>Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
-            <div>
+            <div class="plan__list">
                 <article class="plan">
                     <h1 class="plan__title">FREE</h1>
                     <h2 class="plan__price">$0/month</h2>
                     <h3>For hobby projects or small teams.</h3>
                     <ul class="plan__features">
-                        <li>1 Workspace</li>
-                        <li>Unlimited Traffic</li>
-                        <li>10GB Storage</li>
-                        <li>Basic Support</li>
+                        <li class="plan__feature">1 Workspace</li>
+                        <li class="plan__feature">Unlimited Traffic</li>
+                        <li class="plan__feature">10GB Storage</li>
+                        <li class="plan__feature">Basic Support</li>
                     </ul>
                     <div>
                         <button class="button">CHOOSE PLAN</button>
                     </div>
                 </article>
-                <article class="plan plan__highlighted">
+                <article class="plan plan--highlighted">
                     <h1 class="plan__annotation">RECOMMENDED</h1>
                     <h1 class="plan__title">PLUS</h1>
                     <h2 class="plan__price">$29/month</h2>
                     <h3>For ambitious projects.</h3>
                     <ul class="plan__features">
-                        <li>5 Workspaces</li>
-                        <li>Unlimited Traffic</li>
-                        <li>100GB Storage</li>
-                        <li>Plus Support</li>
+                        <li class="plan__feature">5 Workspaces</li>
+                        <li class="plan__feature">Unlimited Traffic</li>
+                        <li class="plan__feature">100GB Storage</li>
+                        <li class="plan__feature">Plus Support</li>
                     </ul>
                     <div>
                         <button class="button">CHOOSE PLAN</button>
@@ -75,10 +74,10 @@
                     <h2 class="plan__price">$99/month</h2>
                     <h3>Your enterprise solution.</h3>
                     <ul class="plan__features">
-                        <li>10 Workspaces</li>
-                        <li>Unlimited Traffic</li>
-                        <li>Unlimited Storage</li>
-                        <li>Priority Support</li>
+                        <li class="plan__feature">10 Workspaces</li>
+                        <li class="plan__feature">Unlimited Traffic</li>
+                        <li class="plan__feature">Unlimited Storage</li>
+                        <li class="plan__feature">Priority Support</li>
                     </ul>
                     <div>
                         <button class="button">CHOOSE PLAN</button>
@@ -86,44 +85,42 @@
                 </article>
             </div>
         </section>
-        
-        <section id="advertise">
+        <section id="key-features">
             <h1 class="section-title">Many Good Reasons to Stick Around</h1>
-            <ul class="advertise__features--list">
-                <li class="advertise__feature">
-                    <div class="advertise__image">
+            <ul class="key-feature__list">
+                <li class="key-feature">
+                    <div class="key-feature__image">
 
                     </div>
-                    <p>3,857,000 Trusting Customers</p>
+                    <p class="key-feature__description">3,857,000 Trusting Customers</p>
                 </li>
-                <li class="advertise__feature">
-                    <div class="advertise__image">
+                <li class="key-feature">
+                    <div class="key-feature__image">
 
                     </div>
-                    <p>99.999% Uptime Guarantee</p>
+                    <p class="key-feature__description">99.999% Uptime Guarantee</p>
                 </li>
-                <li class="advertise__feature">
-                    <div class="advertise__image">
+                <li class="key-feature">
+                    <div class="key-feature__image">
 
                     </div>
-                    <p>Lightning Fast CDN</p>
+                    <p class="key-feature__description">Lightning Fast CDN</p>
                 </li>
             </ul>
         </section>
-
-        <footer class="main-footer">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">Support</a>
-                    </li>
-                    <li>
-                        <a href="#">Terms of Use</a>
-                    </li>
-                </ul>
-            </nav>
-        </footer>
     </main>
+    <footer class="main-footer">
+        <nav>
+            <ul class="main-footer__links">
+                <li class="main-footer__link">
+                    <a href="#">Support</a>
+                </li>
+                <li class="main-footer__link">
+                    <a href="#">Terms of Use</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
