--- a/CSS - Maxi/packages/index.html
+++ b/CSS - Maxi/packages/index.html
@@ -7,26 +7,28 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="packages.css">
-    <link rel="stylesheet" href="../main.css">
 </head>
 
 <body>
+    <div class="background"></div>
     <header class="main-header">
         <div>
-            <a class="main-header__host" href="index.html">Host</a>
+            <a href="../index.html" class="main-header__brand">
+                uHost
+            </a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav__items">
-               
                 <li class="main-nav__item">
                     <a href="index.html">Packages</a>
                 </li>
                 <li class="main-nav__item">
-                    <a href="index.html">Customers</a>
+                    <a href="../customers/index.html">Customers</a>
                 </li>
-                <li class="main-nav__item">
-                    <a href="packages/index.html">Start Hosting</a>
+                <li class="main-nav__item main-nav__item--cta">
+                    <a href="../start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
@@ -35,6 +37,7 @@
         <section class="package" id="plus">
             <a href="#">
                 <h1 class="package__title">Our PLUS Plan</h1>
+                <h2 class="package__badge">RECOMMENDED</h2>
                 <h2 class="package__subtitle">The most popular choice of our customers.</h2>
                 <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
                     are always available!</p>
